--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
